--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
       "dest": "/api/health.js"
     },
     {
+      "src": "/api/payment/(.*)",
+      "dest": "/api/payment.js"
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/index.js"
     },
