--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
       "dest": "/api/diagnostic.js"
     },
     {
+      "src": "/api/payment-history",
+      "dest": "/api/payment-history.js"
+    },
+    {
       "src": "/api/payment/(.*)",
       "dest": "/api/payment.js"
     },
