--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,24 @@
 {
   "version": 2,
+  "rewrites": [
+    {
+      "source": "/api/create-admin",
+      "destination": "/api/create-admin.js"
+    },
+    {
+      "source": "/api/health",
+      "destination": "/api/health.js"
+    },
+    {
+      "source": "/api/diagnostic",
+      "destination": "/api/diagnostic.js"
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "/api/index.js"
+    }
+  ],
   "routes": [
-    {
-      "src": "/api/create-admin",
-      "dest": "/api/create-admin.js"
-    },
-    {
-      "src": "/api/health",
-      "dest": "/api/health.js"
-    },
-    {
-      "src": "/api/diagnostic",
-      "dest": "/api/diagnostic.js"
-    },
-    {
-      "src": "/api/payment-history",
-      "dest": "/api/payment-history.js"
-    },
-    {
-      "src": "/api/payment/(.*)",
-      "dest": "/api/payment.js"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/index.js"
-    },
     {
       "src": "/assets/(.*)",
       "dest": "/assets/$1"
@@ -37,5 +31,11 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/**/*.js": {
+      "memory": 1024,
+      "maxDuration": 30
+    }
+  }
 }
