--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "vercel-build": "node scripts/vercel-build.js",
+    "vercel-build": "npm run build",
     "create-admin": "node scripts/createAdmin.js",
     "test-vercel-admin": "node scripts/test-vercel-admin.js",
     "verify-deployment": "node scripts/verify-deployment.js",
