--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/test",
+      "destination": "/api/test.js"
+    },
+    {
       "source": "/api/create-admin",
       "destination": "/api/create-admin.js"
     },
@@ -18,7 +22,7 @@
       "destination": "/api/diagnostic.js"
     },
     {
-      "source": "/api/:path*",
+      "source": "/api/(.*)",
       "destination": "/api/index.js"
     }
   ],
