--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.0",
+    "sweetalert2": "^11.26.18",
     "xlsx": "^0.18.5",
     "yet-another-react-lightbox": "^3.28.0"
   },
@@ -64,7 +65,8 @@
     "tailwindcss": "^3.4.1",
     "terser": "^5.46.0",
     "vite": "^5.1.4",
-    "vite-bundle-analyzer": "^0.7.0"
+    "vite-bundle-analyzer": "^0.7.0",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "engines": {
     "node": "20.x"
